[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Game/HUD/HUD.gd" id="1_uilpy"]
[ext_resource type="Script" path="res://Game/HUD/TopPanelGUI.gd" id="2_gtggy"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_uilpy")

[node name="Panel" type="Panel" parent="."]
top_level = true
custom_minimum_size = Vector2(990, 0)
offset_left = 96.0
offset_right = 1120.0
offset_bottom = 40.0
script = ExtResource("2_gtggy")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 37

[node name="TooltipsCheck" type="CheckBox" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
text = "Tooltips Enabled"

[node name="IdleMoveCheck" type="CheckBox" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
button_pressed = true
text = "Idle Walk Enabled"

[node name="AddDwarfBut" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Add Dwarf"

[node name="ModeLabel" type="Label" parent="."]
offset_left = 96.0
offset_top = 64.0
offset_right = 256.0
offset_bottom = 90.0
text = "Mining Mode Active"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.04
offset_top = -115.2
offset_right = 199.04
offset_bottom = 115.2
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="CenterContainer"]
position = Vector2i(482, 316)
size = Vector2i(319, 109)
dialog_text = "Destroy world and back to main menu?
(Saving functionality in progress)"
dialog_autowrap = true

[connection signal="mouse_entered" from="Panel" to="Panel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="Panel" method="_on_mouse_exited"]
[connection signal="toggled" from="Panel/HBoxContainer/TooltipsCheck" to="." method="_on_tooltips_check_toggled"]
[connection signal="toggled" from="Panel/HBoxContainer/IdleMoveCheck" to="." method="_on_idle_move_check_toggled"]
[connection signal="pressed" from="Panel/HBoxContainer/AddDwarfBut" to="." method="_on_add_dwarf_but_pressed"]
[connection signal="canceled" from="CenterContainer/ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="CenterContainer/ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
